Changelog
---------


6.3.2017

+ Created changelog
+ Added Devise to Gemfile
+ Added Ruby 2.3.1 to Gemfile
+ Added Creator model/routes
+ Added materialize gem
+ Added materialize-gem.scss
+ Updated assets/stylesheets/application.css
+ Updated assest/javascripts/application.js
+ Added jquery-rails gme
+ Added rspec test to project
+ Added top navbar with login/logout
+ Signup page styling
+ Added basic-style.scss to stylesheets and manifest
+ Removed minitest tests and added first rspec test
+ Changes to index page styling
+ Added bootstrap
+ Scaffolded Games
+ Linked games and creators
+ Added Question model and linked it to Game
+ if user is signed in, their games display
+ added game select screen