@@ -1,0 +1,3 @@
+class Submission < ApplicationRecord
+  belongs_to :game
+end
