@@ -8,6 +8,7 @@ Rails.application.routes.draw do
 
   devise_for :creators
   resources :welcome
+  resources :submissions
 
 
 
