@@ -1,0 +1,5 @@
+require 'rails_helper'
+
+RSpec.describe SubmissionsController, type: :controller do
+
+end
